--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,13 @@
     padding: 0;
     margin: 0;
 }
+/* body */
 
 body {
     background-color: #d9dcd6;
 }
+
+/* header */
 
 header {
     padding: 20px;
@@ -23,6 +26,8 @@ header h1 {
 header h1 span {
     color: #d9dcd6;
 }
+
+/* navigation */
 
 header nav {
     padding-top: 15px;
@@ -50,6 +55,8 @@ p {
     font-size: 16px;
 }
 
+/* hero/jumbotron */
+
 #hero {
     height: 800px;
     width: 100%;
@@ -69,6 +76,8 @@ p {
     margin-left: 25px;
 }
 
+/* Section with articles */
+
 .content {
     width: 75%;
     display: inline-block;
@@ -87,7 +96,14 @@ article img {
     max-height: 200px;
 }
 
-.benefits {
+section article h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+/* aside */
+
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -98,96 +114,31 @@ article img {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+aside div {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+aside div h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+aside div img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
+/* Footer */
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-
-
-    /* margin-bottom: 20px; 
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
- {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
- */
-
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
