--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ section article h2 {
 
 /* aside */
 
-aside {
+.aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -114,17 +114,17 @@ aside {
     background-color: #2589bd;
 }
 
-aside div {
+aside {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-aside div h3 {
+aside h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-aside div img {
+aside img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
